// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render automatic tab 1`] = `
.c4 {
  box-sizing: border-box;
  flex: 1;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
  flex: 0 0 auto;
  margin-bottom: 32px;
  min-height: 254px;
}

.c10 {
  box-sizing: border-box;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 320px;
}

.c15 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 100%;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c18:active {
  opacity: 0.56;
}

.c18:hover,
.c18:focus {
  background: #651FFF;
}

.c18:active {
  background: #354AA4;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #2C3A73;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: flex;
  flex-direction: column;
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c11 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c14 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c14::-ms-clear {
  display: none;
}

.c14::placeholder {
  opacity: 0.4;
}

.c14:read-only {
  cursor: not-allowed;
}

.c13 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 16px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 8px;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 330px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <div
            class="c8"
            color="text.primary"
          >
            Add Application
          </div>
        </div>
        <div
          class="c9 c5"
        >
          <div
            class="c10 c11"
          >
            <div
              class="c12"
              width="320px"
            >
              <label
                class="c13"
              >
                App Name
                <input
                  autocomplete="off"
                  class="c14"
                  color="text.onLight"
                  inputmode="text"
                  placeholder="jenkins"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <div
              class="c15"
              width="100%"
            >
              <label
                class="c13"
              >
                INTERNAL APPLICATION URL
                <input
                  autocomplete="off"
                  class="c14"
                  color="text.onLight"
                  inputmode="text"
                  placeholder="https://localhost:4000"
                  type="text"
                  value=""
                />
              </label>
            </div>
          </div>
          <div
            class="c16"
          >
            Teleport can automatically set up application access. Provide the name and URL of your application to generate our auto-installer script.
            <div
              class="c17"
            >
              The script will install the Teleport agent to provide secure access to your application.
            </div>
          </div>
          
        </div>
        <div
          class="c10"
        >
          <button
            class="c18"
            kind="primary"
          >
            Generate Script
          </button>
          
          <button
            class="c19"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render automatic tab on created state 1`] = `
.c4 {
  box-sizing: border-box;
  flex: 1;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
  flex: 0 0 auto;
  margin-bottom: 32px;
  min-height: 254px;
}

.c10 {
  box-sizing: border-box;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 320px;
}

.c15 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 100%;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c18:active {
  opacity: 0.56;
}

.c18:hover,
.c18:focus {
  background: #651FFF;
}

.c18:active {
  background: #354AA4;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #2C3A73;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: flex;
  flex-direction: column;
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c11 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c14 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c14::-ms-clear {
  display: none;
}

.c14::placeholder {
  opacity: 0.4;
}

.c14:read-only {
  cursor: not-allowed;
}

.c13 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 16px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 8px;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 330px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <div
            class="c8"
            color="text.primary"
          >
            Add Application
          </div>
        </div>
        <div
          class="c9 c5"
        >
          <div
            class="c10 c11"
          >
            <div
              class="c12"
              width="320px"
            >
              <label
                class="c13"
              >
                App Name
                <input
                  autocomplete="off"
                  class="c14"
                  color="text.onLight"
                  inputmode="text"
                  placeholder="jenkins"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <div
              class="c15"
              width="100%"
            >
              <label
                class="c13"
              >
                INTERNAL APPLICATION URL
                <input
                  autocomplete="off"
                  class="c14"
                  color="text.onLight"
                  inputmode="text"
                  placeholder="https://localhost:4000"
                  type="text"
                  value=""
                />
              </label>
            </div>
          </div>
          <div
            class="c16"
          >
            Teleport can automatically set up application access. Provide the name and URL of your application to generate our auto-installer script.
            <div
              class="c17"
            >
              The script will install the Teleport agent to provide secure access to your application.
            </div>
          </div>
          
        </div>
        <div
          class="c10"
        >
          <button
            class="c18"
            kind="primary"
          >
            Generate Script
          </button>
          
          <button
            class="c19"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render failed automatic tab 1`] = `
.c18 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c18 a {
  color: #FFFFFF;
}

.c4 {
  box-sizing: border-box;
  flex: 1;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
  flex: 0 0 auto;
  margin-bottom: 32px;
  min-height: 254px;
}

.c10 {
  box-sizing: border-box;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 320px;
}

.c15 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 100%;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #651FFF;
}

.c19:active {
  background: #354AA4;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c20 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c20:active {
  opacity: 0.56;
}

.c20:hover,
.c20:focus {
  background: #2C3A73;
}

.c20:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: flex;
  flex-direction: column;
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c11 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c14 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background-color: #FFFFFF;
  color: #324148;
  margin-top: 4px;
}

.c14::-ms-clear {
  display: none;
}

.c14::placeholder {
  opacity: 0.4;
}

.c14:read-only {
  cursor: not-allowed;
}

.c13 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 16px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 8px;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 330px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <div
            class="c8"
            color="text.primary"
          >
            Add Application
          </div>
        </div>
        <div
          class="c9 c5"
        >
          <div
            class="c10 c11"
          >
            <div
              class="c12"
              width="320px"
            >
              <label
                class="c13"
              >
                App Name
                <input
                  autocomplete="off"
                  class="c14"
                  color="text.onLight"
                  inputmode="text"
                  placeholder="jenkins"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <div
              class="c15"
              width="100%"
            >
              <label
                class="c13"
              >
                INTERNAL APPLICATION URL
                <input
                  autocomplete="off"
                  class="c14"
                  color="text.onLight"
                  inputmode="text"
                  placeholder="https://localhost:4000"
                  type="text"
                  value=""
                />
              </label>
            </div>
          </div>
          <div
            class="c16"
          >
            Teleport can automatically set up application access. Provide the name and URL of your application to generate our auto-installer script.
            <div
              class="c17"
            >
              The script will install the Teleport agent to provide secure access to your application.
            </div>
          </div>
          <div
            class="c18"
            kind="danger"
          >
            some error message
          </div>
          
        </div>
        <div
          class="c10"
        >
          <button
            class="c19"
            kind="primary"
          >
            Generate Script
          </button>
          
          <button
            class="c20"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render manual tab with local user 1`] = `
.c4 {
  box-sizing: border-box;
  flex: 1;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
  flex: 0 0 auto;
  margin-bottom: 32px;
}

.c11 {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  border-radius: 4px;
  background-color: #010B1C;
  margin-top: 8px;
  padding: 8px;
}

.c15 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c17 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c18:active {
  opacity: 0.56;
}

.c18:hover,
.c18:focus {
  background: #651FFF;
}

.c18:active {
  background: #354AA4;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #2C3A73;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: flex;
  flex-direction: column;
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c16 {
  display: flex;
}

.c12 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  margin-right: 8px;
}

.c13 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 330px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <div
            class="c8"
            color="text.primary"
          >
            Add Application
          </div>
        </div>
        <div
          class="c9 c5"
        >
          <div
            class="c6"
          >
            <span
              class="c10"
            >
              Step 1
            </span>
             
            - Download Teleport package to your computer
            <div
              class="c11"
            >
              <a
                class="c12"
                href="https://get.gravitational.com/teleport-5.0.0-dev.pkg"
                rel="noreferrer"
                target="_blank"
              >
                MacOS
              </a>
              <a
                class="c12"
                href="https://get.gravitational.com/teleport-v5.0.0-dev-linux-amd64-bin.tar.gz"
                rel="noreferrer"
                target="_blank"
              >
                Linux 64-bit
              </a>
              <a
                class="c13"
                href="https://get.gravitational.com/teleport-v5.0.0-dev-linux-386-bin.tar.gz"
                rel="noreferrer"
                target="_blank"
              >
                Linux 32-bit
              </a>
            </div>
          </div>
          <div
            class="c6"
          >
            <span
              class="c10"
            >
              Step 2
            </span>
             - Login to Teleport
            <div
              class="c14 c7"
            >
              <div
                class="c15 c16"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c17"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh login --proxy=localhost:443 --auth=local --user=sam
                </div>
              </div>
              <button
                class="c18"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c6"
          >
            <span
              class="c10"
            >
              Step 3
            </span>
             - Generate a join token
            <div
              class="c14 c7"
            >
              <div
                class="c15 c16"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c17"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tctl tokens add --type=app
                </div>
              </div>
              <button
                class="c18"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c6"
          >
            <span
              class="c10"
            >
              Step 4
            </span>
             - Configure your teleport agent
            <div
              class="c14 c7"
            >
              <div
                class="c15 c16"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c17"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  teleport configure --output=$HOME/.config/app_config.yaml --app-name=[example-app] --app-uri=http://localhost/ --roles=app --token=[generated-join-token] --proxy=localhost:443 --data-dir=$HOME/.config
                </div>
              </div>
              <button
                class="c18"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c11"
          >
            <span
              class="c10"
            >
              Step 5
            </span>
             - Start the Teleport agent with the generated configuration file
            <div
              class="c14 c7"
            >
              <div
                class="c15 c16"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c17"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  teleport start --config=$HOME/.config/app_config.yaml
                </div>
              </div>
              <button
                class="c18"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c11"
          >
            * Note: For a self-hosted Teleport version, you may need to update DNS and obtain a TLS certificate for this application.
            Learn more about application access 
            <a
              class="c13"
              href="https://goteleport.com/docs/application-access/introduction/"
              rel="noreferrer"
              target="_blank"
            >
              here
            </a>
            .
          </div>
        </div>
        <div
          class="c11"
        >
          <button
            class="c19"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render manual tab with sso user 1`] = `
.c4 {
  box-sizing: border-box;
  flex: 1;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
  flex: 0 0 auto;
  margin-bottom: 32px;
}

.c11 {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  border-radius: 4px;
  background-color: #010B1C;
  margin-top: 8px;
  padding: 8px;
}

.c15 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c17 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c18:active {
  opacity: 0.56;
}

.c18:hover,
.c18:focus {
  background: #651FFF;
}

.c18:active {
  background: #354AA4;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #2C3A73;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: flex;
  flex-direction: column;
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c16 {
  display: flex;
}

.c12 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  margin-right: 8px;
}

.c13 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 330px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <div
            class="c8"
            color="text.primary"
          >
            Add Application
          </div>
        </div>
        <div
          class="c9 c5"
        >
          <div
            class="c6"
          >
            <span
              class="c10"
            >
              Step 1
            </span>
             
            - Download Teleport package to your computer
            <div
              class="c11"
            >
              <a
                class="c12"
                href="https://get.gravitational.com/teleport-5.0.0-dev.pkg"
                rel="noreferrer"
                target="_blank"
              >
                MacOS
              </a>
              <a
                class="c12"
                href="https://get.gravitational.com/teleport-v5.0.0-dev-linux-amd64-bin.tar.gz"
                rel="noreferrer"
                target="_blank"
              >
                Linux 64-bit
              </a>
              <a
                class="c13"
                href="https://get.gravitational.com/teleport-v5.0.0-dev-linux-386-bin.tar.gz"
                rel="noreferrer"
                target="_blank"
              >
                Linux 32-bit
              </a>
            </div>
          </div>
          <div
            class="c6"
          >
            <span
              class="c10"
            >
              Step 2
            </span>
             - Login to Teleport
            <div
              class="c14 c7"
            >
              <div
                class="c15 c16"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c17"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh login --proxy=localhost:443
                </div>
              </div>
              <button
                class="c18"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c6"
          >
            <span
              class="c10"
            >
              Step 3
            </span>
             - Generate a join token
            <div
              class="c14 c7"
            >
              <div
                class="c15 c16"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c17"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tctl tokens add --type=app
                </div>
              </div>
              <button
                class="c18"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c6"
          >
            <span
              class="c10"
            >
              Step 4
            </span>
             - Configure your teleport agent
            <div
              class="c14 c7"
            >
              <div
                class="c15 c16"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c17"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  teleport configure --output=$HOME/.config/app_config.yaml --app-name=[example-app] --app-uri=http://localhost/ --roles=app --token=[generated-join-token] --proxy=localhost:443 --data-dir=$HOME/.config
                </div>
              </div>
              <button
                class="c18"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c11"
          >
            <span
              class="c10"
            >
              Step 5
            </span>
             - Start the Teleport agent with the generated configuration file
            <div
              class="c14 c7"
            >
              <div
                class="c15 c16"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c17"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  teleport start --config=$HOME/.config/app_config.yaml
                </div>
              </div>
              <button
                class="c18"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c11"
          >
            * Note: For a self-hosted Teleport version, you may need to update DNS and obtain a TLS certificate for this application.
            Learn more about application access 
            <a
              class="c13"
              href="https://goteleport.com/docs/application-access/introduction/"
              rel="noreferrer"
              target="_blank"
            >
              here
            </a>
            .
          </div>
        </div>
        <div
          class="c11"
        >
          <button
            class="c19"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render manual tab with token 1`] = `
.c4 {
  box-sizing: border-box;
  flex: 1;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
  flex: 0 0 auto;
  margin-bottom: 32px;
}

.c11 {
  box-sizing: border-box;
}

.c15 {
  box-sizing: border-box;
  border-radius: 4px;
  background-color: #010B1C;
  margin-top: 8px;
  padding: 8px;
}

.c16 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c18 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #651FFF;
}

.c19:active {
  background: #354AA4;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c21 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c21:active {
  opacity: 0.56;
}

.c21:hover,
.c21:focus {
  background: #2C3A73;
}

.c21:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c20 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  padding: 0 8px;
}

.c20:hover,
.c20:focus {
  background: #222C59;
}

.c5 {
  display: flex;
  flex-direction: column;
}

.c7 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c17 {
  display: flex;
}

.c12 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  margin-right: 8px;
}

.c13 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin-right: auto;
  color: rgba(255,255,255,0.87);
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin-top: 4px;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 330px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <div
            class="c8"
            color="text.primary"
          >
            Add Application
          </div>
        </div>
        <div
          class="c9 c5"
        >
          <div
            class="c6"
          >
            <span
              class="c10"
            >
              Step 1
            </span>
             
            - Download Teleport package to your computer
            <div
              class="c11"
            >
              <a
                class="c12"
                href="https://get.gravitational.com/teleport-5.0.0-dev.pkg"
                rel="noreferrer"
                target="_blank"
              >
                MacOS
              </a>
              <a
                class="c12"
                href="https://get.gravitational.com/teleport-v5.0.0-dev-linux-amd64-bin.tar.gz"
                rel="noreferrer"
                target="_blank"
              >
                Linux 64-bit
              </a>
              <a
                class="c13"
                href="https://get.gravitational.com/teleport-v5.0.0-dev-linux-386-bin.tar.gz"
                rel="noreferrer"
                target="_blank"
              >
                Linux 32-bit
              </a>
            </div>
          </div>
          <div
            class="c6"
          >
            <span
              class="c10"
            >
              Step 2
            </span>
             - Configure your teleport agent
            <div
              class="c14"
            >
              The token will be valid for
               
              <span
                class="c10"
              >
                1 hour
                .
              </span>
            </div>
            <div
              class="c15 c7"
            >
              <div
                class="c16 c17"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c18"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  teleport configure --output=$HOME/.config/app_config.yaml --app-name=[example-app] --app-uri=http://localhost/ --roles=app --token=join-token --proxy=localhost:443 --data-dir=$HOME/.config
                </div>
              </div>
              <button
                class="c19"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
            <div
              class="c11"
            >
              <a
                class="c19 c20"
              >
                Regenerate Token
              </a>
            </div>
          </div>
          <div
            class="c11"
          >
            <span
              class="c10"
            >
              Step 3
            </span>
             - Start the Teleport agent with the configuration file
            <div
              class="c15 c7"
            >
              <div
                class="c16 c17"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c18"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  teleport start --config=$HOME/.config/app_config.yaml
                </div>
              </div>
              <button
                class="c19"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
        </div>
        <div
          class="c11"
        >
          <button
            class="c21"
            kind="secondary"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
